  - New: *glasses-mode* is now bound to ``<f11> t m g`` key sequence.  The
    *pel-show-text-modes* command (bound to ``<f11 t m ?``) now also display
    the state of glasses-mode.
  - New: overwrite-mode is also bound to the <Esc><kp-0> key sequence.  This
    makes it very similar to the default <insert> key which is not available
    in macOS keyboards.
- Update: *VCS*:
  - The *pel-use-hgignore-mode* user-option activates support for
    *hgignore-mode* when turned on (set to t).  This provides font locking for
    the Mercurial .hgignore files.
- Update: *Windows Management*:
  - The Windows Hydra now provides quick access to the
    ``pel-toggle-window-dedicated`` command which toggles the dedicated state
    of a window.
  - Add support for the *windresize* external package:
    - Activate it by setting *pel-use-windresize* to *t*.
    - The windresize command is bound to the ``<f11> w r`` key sequence.
** Other Modifications:
- The customization group pel-pkg-for-xref is now a child of
  pel-pkg-for-navigation and holds tags based cross-reference build control as
  well as non-tags based such as [[https://github.com/jacktasia/dumb-jump][dump-jump]].
- Code change: renamed pel-tags.el to pel-xref.el to better reflect its nature.
- New: ``make it`` command used for development: compiles all Emacs Lisp
  files, runs the tests but does not build the package.
** Reference PDF updates:
+ Update: More consistency in the key binding cell background colors.
+ New: Some of the header cells are coloured to help quickly identify the
  nature of a group of commands inside a long table.  This is mainly used in
  reference tables describing programming language support.
+ New: added background colours to key sequence cells to highlight the fact
  that some key sequences are only available for specific major or minor modes
  or when point is over text that has been turned into a button.