@@ -5454,6 +5454,9 @@ the ones defined from the buffer now."
                      magit-status)
   (define-key pel:vcs "g"  'magit-status))
 
+(when pel-use-gitignore-mode
+  (pel-ensure-package gitignore-mode from: melpa))
+
 ;; Mercurial Support
 (when pel-use-monky
   (pel-ensure-package monky from: melpa)
