@@ -907,7 +907,9 @@ PEL -- Pragmatic Environment Library --  NEWS         -*- org -*-
     makes it very similar to the default <insert> key which is not available
     in macOS keyboards.
 - Update: *VCS*:
-  - The *pel-use-hgignore-mode* user-option activates support for
+  - New: The *pel-use-gitignore-mode* user-option activates support for the
+    *gitignore-mode*.
+  - New: The *pel-use-hgignore-mode* user-option activates support for
     *hgignore-mode* when turned on (set to t).  This provides font locking for
     the Mercurial .hgignore files.
 - Update: *Windows Management*:
